平成28年1回目の結果を記録

--- a/html/terms.html
+++ b/html/terms.html
@@ -299,7 +299,7 @@
                 </h2>
                 <div id="GARP" class="accordion-collapse collapse">
                     <div class="accordion-body">
-                        自端末のIPアドレスをターゲットIPアドレスにセットした特殊なARP要求。
+                        自端末のIPアドレスをターゲットIPアドレスにセットした特殊なARP要求。DHCPにおける重複IPアドレスの検知、フェールオーバー時のARPテーブルの更新に利用される。
                     </div>
                 </div>
             </div>
